<resources>
    <string name="app_name">Playlist_Maker_Full</string>
    <string name="search_playlist">Поиск</string>
    <string name="media_library_playlist">Медиатека</string>
    <string name="setting_playlist">Настройки</string>

    <string name="setting_night_subject">Темная тема</string>
    <string name="setting_share_app">Поделиться приложением</string>
    <string name="setting_write_to_support">Написать в поддержку</string>
    <string name="setting_terms_of_use">Пользовательское соглашение</string>
    <string name="setting_link_yandex_practicum">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="setting_message_text_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="setting_subject_text_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="setting_link_offer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="setting_application_developers_mail">Makss.impeks@gmail.com</string>

    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_communication_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте \nподключение к интернету</string>
    <string name="search_button_update">Обновить</string>
    <string name="search_clear_history">Очистить историю</string>
    <string name="search_you_search">Вы искали</string>

    <string name="track_trackTimeMillis">Длительность</string>
    <string name="track_trackName">Альбом</string>
    <string name="track_releaseDate">Год</string>
    <string name="track_primaryGenreName">Жанр</string>
    <string name="track_country">Страна</string>

    <string name="tools_track_name">Track_name</string>
    <string name="tools_performer_group">Performer_group</string>
    <string name="tools_time">0:00</string>
    <string name="tools_year">Year</string>
    <string name="tools_genre">Genre</string>
    <string name="tools_country">Country</string>

    <string name="empty_list">Пустой список</string>
    <string name="start_time">00:00</string>

    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlist">Плейлисты</string>

    <string name="media_library_favorite_track_empty">Ваша медиатека пуста</string>
    <string name="media_library_favorite_track_button_add_playlist">Новый плейлист</string>
    <string name="media_library_playlist_empty">Вы не создали \nни одного плейлиста</string>

    <string name="response_error_1">Проверьте подключение к интернету</string>
    <string name="response_error_2">Ошибка сервера</string>

    <string name="new_playlist_finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="new_playlist_data_loss">Все несохраненные данные будут потеряны</string>
    <string name="new_playlist_cancellation">Отмена</string>
    <string name="new_playlist_complete">Завершить</string>
    <string name="new_playlist_playlist">Плейлист</string>
    <string name="new_playlist_created">создан</string>
    <string name="new_playlist_edit">Редактировать</string>
    <string name="new_playlist_save">Сохранить</string>

    <string name="album_playlist_menu_share">Поделиться</string>
    <string name="album_playlist_menu_edin_information">Редактировать информацию</string>
    <string name="album_playlist_menu_delete_album">Удалить плейлист</string>

    <string name="album_info_delete_track">Хотите удалить трек?</string>
    <string name="album_info_delete_album">Хотите удалить плейлист</string>
    <string name="album_info_no_list_track">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="album_info_delete_yes">ДА</string>
    <string name="album_info_delete_no">НЕТ</string>

</resources>