<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MainActivityStyleBlueWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextStyleMainMenu"
        android:text="@string/app_name"
        />

    <Button
        android:id="@+id/search_playlist_maker"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_playlist"
        app:icon="@drawable/search_playlist" />

    <Button
        android:id="@+id/media_library_playlist_maker"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_library_playlist"
        app:icon="@drawable/media_library_playlist" />

    <Button
        android:id="@+id/setting_playlist_maker"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_playlist"
        app:icon="@drawable/settings_playlist" />

</LinearLayout>