<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/setting_back"
            style="@style/BtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_back" />

        <TextView
            style="@style/TextStyleMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_playlist" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_night_subject"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/themeSwitcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/setting_night_subject"
            android:textSize="@dimen/settings_text_size"
            tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_share_app"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_share_app_text"
            style="@style/StyleSettingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="15"
            android:text="@string/setting_share_app" />

        <ImageView
            style="@style/StyleSettingVector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/share_app" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_write_support"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_write_support_text"
            style="@style/StyleSettingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="15"
            android:text="@string/setting_write_to_support" />

        <ImageView
            style="@style/StyleSettingVector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/support_agent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_term_use"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settings_term_use_text"
            style="@style/StyleSettingText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="15"
            android:text="@string/setting_terms_of_use" />

        <ImageView
            style="@style/StyleSettingVector"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/next_open_window" />
    </LinearLayout>


</LinearLayout>